--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		document.getElementById("T10").textContent ="10x" + N1 + "=" + A10.toFixed(2);
 	}
 	function sr() {
-    	window.open("file:///C:/Users/Cristobal/Desktop/HTML/Menu.html");
-    	window.close("file:///C:/Users/Cristobal/Desktop/HTML/Multiplicaciones.html");
+    	window.open("https://beremis69.github.io/Proyecto.html/");
+    	window.close("https://beremis69.github.io/Multic/");
     }
 
 </script>
